# rp2040-freq-counter

./: .gitignore  LICENCE  README.md
pio/: CMakeLists.txt  counter.pio  main.c  main.h
pio-pps/: CMakeLists.txt  buf.c  buf.h  counter.pio  counter.pio-before-dma  lcd.c  lcd.h  main.c  main.h  pps.pio
pwm/: CMakeLists.txt  main.c  main.h
